--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "fagner-alves/flex-upload-library-php": "dev-master"
     },
     "autoload": {
         "psr-4": {
