--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
-        "fagner-alves/flex-upload-library-php": "dev-master"
+        "php": ">=5.3.3"
     },
     "autoload": {
         "psr-4": {
