--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
-        "minimum-stability": "dev"
+        "php": ">=5.3.3"
     },
     "autoload": {
         "psr-4": {
-          "FlexUpload\\": "src/"
+          "FlexUpload\\": "src/FlexUpload.php"
         }
     }   
 }
